# bead

./: .bash_setup  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
bead/: __init__.py  labels.py
bead/active_learning/: config.py  loop.py  selection.py  strategies.py
bead/adapters/: __init__.py  huggingface.py
bead/behavioral/: __init__.py  analytics.py  extraction.py  merging.py
bead/cli/: __init__.py  active_learning.py  active_learning_commands.py  completion.py  config.py  constraint_builders.py  deployment.py  deployment_trials.py  deployment_ui.py  display.py  items.py  items_factories.py  list_constraints.py  lists.py  main.py  models.py  protocol.py  resource_loaders.py  resources.py  shell.py  simulate.py  templates.py  training.py  utils.py  workflow.py
bead/config/: __init__.py  active_learning.py  config.py  defaults.py  deployment.py  env.py  item.py  list.py  loader.py  logging.py  model.py  paths.py  profiles.py  protocol.py  resources.py  serialization.py  simulation.py  template.py  validation.py
bead/data/: __init__.py  base.py  identifiers.py  language_codes.py  metadata.py  range.py  repository.py  serialization.py  (+2 more)
docs/: index.md  installation.md  quickstart.md  requirements.txt
sash/: __init__.py  __main__.py
scripts/: ci.sh
tests/: __init__.py  conftest.py  test_api_docs.py  test_labels.py
(+795 files in other folders)
