[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sash"
version = "0.1.0"
description = "Lexicon and Template Collection Construction Pipeline for Acceptability and Inference Judgment Data"
authors = [{name = "Aaron Steven White", email = "aaron.white@rochester.edu"}]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "uuid-utils>=0.7.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "langcodes>=3.3.0",
    "glazing>=0.2.0",
    "unimorph>=0.0.4",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pandas-stubs>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--cov=sash", "--cov-report=term-missing"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "D", "UP", "ANN", "B", "A", "C4"]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
reportMissingTypeStubs = false
useLibraryCodeForTypes = true
exclude = [
    "tests/**",
    "sash/resources/adapters/unimorph.py",
    "sash/templates/adapters/huggingface.py",
    "sash/items/adapters/huggingface.py",
    "sash/items/adapters/sentence_transformers.py",
]
